@@ -5,19 +5,20 @@
 
 namespace Test 
 
-let annot f x y = ((f : 'a -> 'a) x, y) : _ * int
+let test_patt f x =
+    match x with
+    | [] -> 3
+    | x :: xs -> f x
 
-(*let f x = match x with 1 -> true
-
+(*
 let rec map f = function
     | [] -> []
     | x :: xs -> f x :: map f xs
-
-let id x = x
 *)
 
 (*
 let app f x = f x
+let id x = x
 
 let i = app id id
 
